recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value snowside
		snowside(levels-1, length/2)
                ^